<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonChooser1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_chooser_howdy"
        app:layout_constraintBottom_toTopOf="@+id/buttonChooser2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingChooserTextView"
        app:layout_constraintVertical_bias="0.24000001" />

    <Button
        android:id="@+id/buttonChooser2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_chooser_hi"
        app:layout_constraintBottom_toTopOf="@+id/buttonChooser3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChooser1" />

    <Button
        android:id="@+id/buttonChooser3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_chooser_hello"
        app:layout_constraintBottom_toTopOf="@+id/buttonChooser4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChooser2" />

    <Button
        android:id="@+id/buttonChooser4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_chooser_wassup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChooser3" />

    <TextView
        android:id="@+id/greetingChooserTextView"
        android:layout_width="246dp"
        android:layout_height="89dp"
        android:layout_marginTop="80dp"
        android:text="@string/greeting_chooser_title"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>